--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "homepage": "https://www.rehanmanzoor.me",
   "authors": [
     {
-      "name": "Rehan Manzoor",
+      "name": "Rummy Khan",
       "email": "rehan_manzoor@outlook.com"
     }
   ],
